IMPROVE: add info about gait and cost of transportation

--- a/02_Locomotion.tex
+++ b/02_Locomotion.tex
@@ -28,6 +28,14 @@
             \item control complexity
             \item Energy consumption
         \end{itemize*}
+        \ides{Cost of transportation $C_{mt}$:} $= \frac{E}{m \cdot g \cdot d} = \frac{P}{m \cdot g \cdot v}$,
+        \begin{itemize*}
+            \ides{E:} Energy
+            \ides{P:} Power
+            \ides{m:} Mass
+            \ides{d:} Distance
+            \ides{v:} Speed
+        \end{itemize*}
 \end{itemize}
 
 \subsection{Legged Locomotion}
@@ -40,6 +48,8 @@
     \icon Energy Consumption
 \end{itemize*}
 \begin{itemize}
+    \ides{Gait:} Distinct sequence of lift and release events of individual legs
+    \item $\#$ possible events for $k$ legged robot is $N = (2k - 1)!$
     \ides{Static Gaits:}
         \begin{itemize*}
             \item System is statically sable
