--- a/03_Kinematics.tex
+++ b/03_Kinematics.tex
@@ -2,23 +2,40 @@
 
 \section{Kinematics}
 \subsection{Rigid Body Kinematics}
-\includegraphics[width=\linewidth]{./Figures/03_RigidBodyTransformation.png}
+\begin{minipage}[b]{0.43\linewidth}
+    \includegraphics[width=\linewidth]{./Figures/03_RigidBodyTransformation.png}
+\end{minipage}
+\begin{minipage}[b]{0.55\linewidth}
+    \raggedright
+    \begin{itemize}
+        \ides{Translation:} All pts of the body move parallele
+            \begin{itemize}
+                \item Vector from $O$ to $P$ in $I$: ${}_I r_{OP} = {}_I r_{OB} + {}_I r_{BP}$
+                \item Velocity of of pt $P$ in $I$: ${}_I v_P = {}_I \dot r_{OP}$
+            \end{itemize}
+    \end{itemize}
+\end{minipage}
 \begin{itemize}
-    \ides{Translation:} All pts of the body move parallele
-        \begin{itemize}
-            \item Vector from $O$ to $P$ in $I$: ${}_I r_{OP} = {}_I r_{OB} + {}_I r_{BP}$
-            \item Velocity of of pt $P$ in $I$: ${}_I v_P = {}_I \dot r_{OP}$
-        \end{itemize}
-    \ides{Rotation:} One pt is fixed an all other move around it
-        \begin{itemize}
-            \item Vector $r$ in $B$ rotated to $I$: ${}_I r = R_{IB} {}_B r$
-            \item Rotation along $z$: $R_{IB} =
-                \begin{bmatrix}
-                    \cos(\varphi) & -\sin(\varphi) & 0\\
-                    \sin(\varphi) & \cos(\varphi) & 0\\
-                    0 & 0 & 1
-                \end{bmatrix}$
-            \ides{Inverse:} $R_{BI} = R^{-1}_{IB} = R^\transpose_{IB}$
+        \ides{Rotation:} One pt is fixed an all other move around it
+            \begin{itemize}
+                \item Vector $r$ in $B$ rotated to $I$: ${}_I r = R_{IB} {}_B r$
+                \item Rotation $R_{IB}$ along $x, y, z$:
+                    $\begin{bmatrix}
+                        1 & 0 & 0\\
+                        0 & \cos(\varphi) & -\sin(\varphi)\\
+                        0 & \sin(\varphi) & \cos(\varphi)
+                    \end{bmatrix}$
+                    $\begin{bmatrix}
+                        \cos(\varphi) & 0 & \sin(\varphi)\\
+                        0 & 1 & 0\\
+                        - \sin(\varphi) & 0 & \cos(\varphi)\\
+                    \end{bmatrix}$
+                    $\begin{bmatrix}
+                        \cos(\varphi) & -\sin(\varphi) & 0\\
+                        \sin(\varphi) & \cos(\varphi) & 0\\
+                        0 & 0 & 1
+                    \end{bmatrix}$
+                \ides{Inverse:} $R_{BI} = R^{-1}_{IB} = R^\transpose_{IB}$
             \ides{Composition:} $R_{AI} = R_{AB} \cdot R_{BI}$
             \item Angular velocity of $B$ in $I$ along $z$: ${}_I \omega_{IB} = (0, 0, \dot \varphi)^\transpose$
                 \begin{itemize}
@@ -31,7 +48,7 @@
                     0 & -{}_I \omega^z_{IB} & {}_I \omega^y_{IB}\\
                     {}_I \omega^z_{IB} & 0 & -{}_I \omega^x_{IB}\\
                     -{}_I \omega^y_{IB} & {}_I \omega^x_{IB} & 0
-                \end{bmatrix}, \ {}_I \omega_{IB}
+                \end{bmatrix}, {}_I \omega_{IB} =
                 \begin{bmatrix}
                     {}_I \omega^x_{IB}\\
                     {}_I \omega^y_{IB}\\
@@ -57,10 +74,10 @@
             \item Full motion: ${}_I v_P = {}_I \dot r_{OP} = {}_I \dot r_{OB} + {}_I \omega_{IB} \times {}_I r_{BP}$
         \end{itemize}
     \ides{Vector Differentiation}
-        \begin{description}
-            \item[Non-moving system:] ${}_I r \implies {}_I \dot r = \frac{d {}_I r}{dt}$
-            \item[Moving (translating or rotating) system:] ${}_B r \implies {}_B \dot r = \frac{d {}_B r}{dt} + {}_B \omega_{IB} \times {}_B r$
-        \end{description}
+        \begin{itemize}
+            \ides{Non-moving system:} ${}_I r \implies {}_I \dot r = \frac{d {}_I r}{dt}$
+            \ides{Moving (translating or rotating) system:} ${}_B r \implies {}_B \dot r = \frac{d {}_B r}{dt} + {}_B \omega_{IB} \times {}_B r$
+        \end{itemize}
     \ides{Generalized Coordinated}
         \begin{itemize}
             \item Set of independent variables that uniquely describe the robot's configuration
@@ -84,15 +101,22 @@
 \begin{itemize}
     \item Given desired endeffector position $r_{OF}(q) = r^{\text{goal}}_{OF}$, determine generalized coordinates $q$
     \item $r_{OF}(q)$ not easily invertible
-    \ides{Iterative Method:}
-        \begin{itemize}
-            \item[1)] Initialize $q = q^0$ to initial guess and set $r = r(q)$
-            \item[2)] Evaluate Jacobian $J_P = \left.\frac{\partial r_{OF}}{\partial q} \right|_{q = q^i}$
+\end{itemize}
+\begin{minipage}[b]{0.6\linewidth}
+    \begin{itemize}
+        \ides{Iterative Method:}
+            \begin{itemize}
+                \item[1)] Initialize $q = q^0$ to initial guess and set $r = r(q)$
+                \item[2)] Evaluate Jacobian $J_P = \left.\frac{\partial r_{OF}}{\partial q} \right|_{q = q^i}$
                 \item[3)] Invert Jacobian to obtain $\bigtriangleup q = J^+ \bigtriangleup r_{OF}$
                 \item[4)] Update generalized coordinates $q^{i+1} = q^i + J^+(r^\text{goal}_{OF} - r^j_{OF}$
                 \item[5)] Repeat from $2$ till converge
-        \end{itemize}
-\end{itemize}
+            \end{itemize}
+    \end{itemize}
+\end{minipage}
+\begin{minipage}[b]{0.38\linewidth}
+    \includegraphics[width=\linewidth]{./Figures/03_InverseKinematrics.png}
+\end{minipage}
 
 \subsection{Inverse Differential Kinematics}
 \begin{itemize}
@@ -180,8 +204,13 @@
 \end{itemize}
 
 \subsubsection{Wheel Kinematic}
-\includegraphics[width=\linewidth]{./Figures/03_WheelEquation.png}
-\includegraphics[width=\linewidth]{./Figures/03_StandardWheel.png}
+\begin{minipage}[b]{0.48\linewidth}
+    \includegraphics[width=\linewidth]{./Figures/03_WheelEquation.png}
+\end{minipage}
+\begin{minipage}[b]{0.48\linewidth}
+    \includegraphics[width=\linewidth]{./Figures/03_StandardWheel.png}
+\end{minipage}
+
 \begin{itemize*}
     \item Robot state: $\xi_I = [x, y, \theta]^\transpose$
     \item $\dot \xi_I = [\dot x, \dot y, \dot \theta]^\transpose$
@@ -322,24 +351,26 @@
             \item $\delta_s = 2 \Rightarrow N_f = 0$
         \end{itemize*}
     \ides{Examples:}\\
-        \begin{tabular}{l | l | l | l | l | l | l | l | l | l}
-            & \rotatebox{90}{Omnidirectional}
-            & \rotatebox{90}{Differential}
-            & \rotatebox{90}{Omni-Steer}
-            & \rotatebox{90}{Tricyle}
-            & \rotatebox{90}{Two-Steer}
-            & \rotatebox{90}{Ackerman Steer}
-            & \rotatebox{90}{Bicycle}
-            & \rotatebox{90}{Synchro Drive}
-            & \rotatebox{90}{Onmi Drive}\\\hline
-            $\delta_M$ & 3 & 2 & 3 & 2 & 3 & 2 & 2 & 2 & 3\\
-            $\delta_m$ & 3 & 2 & 2 & 1 & 1 & 1 & 1 & 1 & 3\\
-            $\delta_s$ & 0 & 0 & 1 & 1 & 2 & 1 & 1 & 1 & 0
-        \end{tabular}
 \end{itemize}
+{\footnotesize
+    \begin{tabular}{l | l | l | l | l | l | l | l | l | l}
+        & \rotatebox{90}{Omnidirectional}
+        & \rotatebox{90}{Differential}
+        & \rotatebox{90}{Omni-Steer}
+        & \rotatebox{90}{Tricyle}
+        & \rotatebox{90}{Two-Steer}
+        & \rotatebox{90}{Ackerman Steer}
+        & \rotatebox{90}{Bicycle}
+        & \rotatebox{90}{Synchro Drive}
+        & \rotatebox{90}{Onmi Drive}\\\hline
+        $\delta_M$ & 3 & 2 & 3 & 2 & 3 & 2 & 2 & 2 & 3\\
+        $\delta_m$ & 3 & 2 & 2 & 1 & 1 & 1 & 1 & 1 & 3\\
+        $\delta_s$ & 0 & 0 & 1 & 1 & 2 & 1 & 1 & 1 & 0
+    \end{tabular}
+}
 
 \subsection{Motion Control - Feedback Control}
-\includegraphics[width=\linewidth]{./Figures/03_MotionControl.png}
+    \includegraphics[width=\linewidth]{./Figures/03_MotionControl.png}
 \begin{itemize}
     \item Drive robot from ${}_I[x, y, \delta]$ to ${}_I[0, 0, 0]$
     \ides{Error:} $e = [x, y, \delta]^\transpose$
@@ -353,8 +384,7 @@
             y\\
             \theta
         \end{bmatrix}$
-    \item Find $K$ such that $lim_{t \to \infty} e(t) = 0$
-    \item $
+    \item Find $K$ such that $lim_{t \to \infty} e(t) = 0
         \begin{bmatrix}
             \dot x\\
             \dot y\\
