--- a/main.tex
+++ b/main.tex
@@ -12,20 +12,19 @@
 \usepackage{cheatsheet}
 \usepackage{math}
 
+% Start section count at 0
+\setcounter{section}{-1}
+
 \raggedright
 
 \begin{document}
 \begin{multicols*}{5}
+    \input{00_General.tex}
     \input{01_Introduction.tex}
     \input{02_Locomotion.tex}
     \input{03_Kinematics.tex}
     \input{04_Perception.tex}
     \input{05_Localization.tex}
     \input{06_Planning.tex}
-
-    \todo{Probability}
-    \todo{Covariance}
-    \todo{Polar Coordinates}
-    \todo{General, power, log etc}
 \end{multicols*}
 \end{document}
