IMPROVE: add missing remark about correlation

--- a/04.tex
+++ b/04.tex
@@ -14,7 +14,7 @@
 
 \subsection{Grenzwertsätze}
 \begin{itemize}
-    \ides{Schwaches Gesetz der grossen Zahlen:} Sein $X_1, X_2, \dots$ eine Folge von unabhängigen ZV, die alle den gleichen EW $E[X_i] = \mu$ und die Var $Var[X_i] = \sigma^2$ haben. Sei: $\overline{X}_n = \frac{1}{n} S_n = \frac{1}{n} \sum_{i=1}^{n} X_i$. Dann konvergiert $\overline{X}_n$ für $n \to \infty$ gegen $\mu$.
+    \ides{Schwaches Gesetz der grossen Zahlen:} Sein $X_1, X_2, \dots$ eine Folge von unabhängigen ZV (oder paarweise unkorreliert), die alle den gleichen EW $E[X_i] = \mu$ und die Var $Var[X_i] = \sigma^2$ haben. Sei: $\overline{X}_n = \frac{1}{n} S_n = \frac{1}{n} \sum_{i=1}^{n} X_i$. Dann konvergiert $\overline{X}_n$ für $n \to \infty$ gegen $\mu$.
         \begin{itemize}
             \item  D.h. $P[|\overline{X}_n - \mu| > \epsilon] \underset{n \to \infty}{\to} 0, \forall \epsilon > 0$.
         \end{itemize}
